--- a/Windows 3.11/gtk-3.0/gtk-widgets.css
+++ b/Windows 3.11/gtk-3.0/gtk-widgets.css
@@ -1667,7 +1667,13 @@ scrollbar {
 scrollbar trough {
     border: none;
     background: transparent;
-    box-shadow: inset 0 0 0 1px @theme_fg_color;
+    box-shadow: inset 0 1px @theme_fg_color,
+                inset 0 -1px @theme_fg_color;
+}
+
+scrollbar.vertical trough {
+    box-shadow: inset 1px 0 @theme_fg_color,
+                inset -1px 0 @theme_fg_color;
 }
 
 scrollbar button {
@@ -1715,11 +1721,13 @@ scrollbar.vertical button.up {
 }
 
 scrollbar.horizontal button.down {
-    -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");
+/*    -gtk-icon-source: -gtk-icontheme("pan-right-symbolic");*/
+    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
 }
 
 scrollbar.horizontal button.up {
-    -gtk-icon-source: -gtk-icontheme("pan-left-symbolic");
+/*    -gtk-icon-source: -gtk-icontheme("pan-left-symbolic");*/
+    -gtk-icon-source: -gtk-icontheme("pan-start-symbolic");
 }
 
 treeview ~ scrollbar.vertical {
